Bug 1106537 - Ensure the current animated geometry root is initialized properly. r=tn